# ai-workflows

./: .cursorrules  .gitignore  LICENSE  README.md  README_fr.md
_ai_workflows/: README.md  README_fr.md
_ai_workflows/_generated/: .gitignore
_ai_workflows/code_based/faq_analysis/: README.md
_ai_workflows/code_based/faq_analysis/_code/: instructions.yaml  run.py
_ai_workflows/factory/new_instructions/: run.md
_ai_workflows/factory/new_instructions/instructions/: instructions_v1.0.0.md
_ai_workflows/factory/new_workflow/: run.md
_ai_workflows/factory/new_workflow/instructions/: instructions_v1.0.0.md
_ai_workflows/templates/: instructions_v1.0.0.md
_ai_workflows/text_based/: README.md
_ai_workflows_packages/ai_workflows/: README.md  README_fr.md  pyproject.toml
_ai_workflows_tutorials/: README.md  README_fr.md
_ai_workflows_tutorials/1_cursor_ai/1_interface_et_fonctionnalités/: .cursorrules  .history
_ai_workflows_tutorials/1_cursor_ai/2_template_nouveau_projet/: README.md  instructions_v1.0.0.md
_ai_workflows_tutorials/1_cursor_ai/3_exemple_de_projet_complexe/: instructions_v1.0.0.md  instructions_v1.1.0.md
_ai_workflows_tutorials/2_ai_workflows/: .cursorrules  tutorial.md  tutorial_fr.md
_ai_workflows_tutorials/3_ai_workflows_as_code/: tutorial.md  tutorial_fr.md
_ai_workflows_tutorials/3_ai_workflows_as_code/_ai_workflows_packages/ai_workflows/: README.md  README_fr.md  pyproject.toml
_ai_workflows_tutorials/3_ai_workflows_as_code/_ai_workflows_packages/ai_workflows/src/ai_workflows/: context.py  graph.py
(+78 files in other folders)
